--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "react-dom": "^19.2.4",
     "react": "^19.2.4",
-    "@google/genai": "^1.41.0",
-    "recharts": "^3.7.0"
+    "@google/genai": "1.41.0",
+    "recharts": "3.7.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
